[package]
name = "lru-delete-models"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[[bin]]
name = "lru-delete-models"
path = "src/main.rs"

[dependencies]
# Internal
errors = { path = "../../lib/errors" }
logging = { path = "../../lib/logging" }

# Workspace hack (faster compile times)
my-workspace-hack = { version = "0.1", path = "../../my-workspace-hack" }

# External
clap = { version = "4.4.8", features = ["derive"] }
walkdir = "2.4.0"

[dev-dependencies]
# None yet
