[package]
name = "actix_cors_configs"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
name = "actix_cors_configs"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Internal
#errors = { path = "../../lib/errors" }
reusable_types = { path = "../../_types/reusable_types" }

# Workspace hack (faster compile times)
workspace-build-acceleration = { version = "0.1", path = "../../workspace-build-acceleration" }

# External
log = "0.4.14"

# Actix
actix-cors = "0.6.4"
actix-http = "3.7.0"
actix-web = "4.7.0"
url = { version = "2.5.0", features = [] }

[dev-dependencies]
actix-rt = "2.10.0"
speculoos = "0.11.0" # Fluent assertions
