[package]
name = "actix_helpers"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
# NB: Public "errors" crate is name-squatted, so we're fine to use this internally.
name = "actix_helpers"
path = "src/lib.rs"

[dependencies]
# Internal
errors = { path = "../../lib/errors" }

# Actix
actix-http = "3.4.0"
actix-rt = "2.9.0"
actix-service = "2.0.1"
actix-utils = "3.0.0"
actix-web = "4.0.0-beta.10"

# IPv4 and v6 CIDRs (crate has few dependencies)
cidr-utils = "0.5.11"
num-traits = "0.2.15" # for cidr-utils

# Futures
futures-util = "0.3.29"

# Serialization
serde = "1.0.125"
serde_json = "1.0.108"
my-workspace-hack = { version = "0.1", path = "../../../my-workspace-hack" }

[dev-dependencies]
# None yet
