[package]
name = "actix_helpers"
edition = "2018"
version = "0.0.1"
authors = [
    "Brandon Thomas <bt@brand.io>",
    "Brandon Thomas <echelon@gmail.com>",
]
publish = false

[lib]
# NB: Public "errors" crate is name-squatted, so we're fine to use this internally.
name = "actix_helpers"
path = "src/lib.rs"

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-build-acceleration"]

[dependencies]
# Workspace hack (faster compile times)
workspace-build-acceleration.workspace = true

# Internal
errors.workspace = true

# External
log.workspace = true

# Actix
actix-http.workspace = true
actix-service.workspace = true
actix-web.workspace = true

# IPv4 and v6 CIDRs (crate has few dependencies)
cidr-utils = "0.5.11"
num-traits = "0.2.17" # for cidr-utils

# Futures
futures-util = "0.3.29"

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# None yet
